# csgo-cheats

.github/workflows/: compile.yml
PC/: CMakeLists.txt
PC/Arduino/: arduino.h
PC/Arrays/: arrays.h
PC/Features/: aim_bot.h  trigger_bot.h
PC/Memory/: memory.h
csgo_arduino/: README.md  csgo_arduino.ino
csgo_arduino/Helpers/: global.h  utils.h
